# lovable-project-cloner

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: api.py  builder.py  config.py  core.py  model.py
